--- a/style/stylesheet.css
+++ b/style/stylesheet.css
@@ -86,6 +86,11 @@ h5 {
     padding: 20px;
     border-radius: 5px;
     justify-content: space-between;
+    position: fixed;
+    z-index: 20;
+    box-shadow: 0 1px 2px rgba(0,0,0,0.07), 
+                0 2px 3px rgba(0,0,0,0.07), 
+                0 3px 6px rgba(0,0,0,0.07);
 }
 
 .navbar-option a {
