--- a/style/responsive.css
+++ b/style/responsive.css
@@ -209,7 +209,7 @@
     }
 
     .navbar.responsive {
-        position: relative;
+        position: fixed;
     }
 
     .navbar.responsive a.hamburger {
