--- a/style/stylesheet.css
+++ b/style/stylesheet.css
@@ -3,6 +3,7 @@
 * {
     box-sizing: border-box;
     scroll-behavior: smooth;
+    image-rendering: optimizeSpeed;
 }
 
 body {
@@ -88,9 +89,9 @@ h5 {
     justify-content: space-between;
     position: fixed;
     z-index: 20;
-    box-shadow: 0 1px 2px rgba(0,0,0,0.07), 
-                0 2px 3px rgba(0,0,0,0.07), 
-                0 3px 6px rgba(0,0,0,0.07);
+    box-shadow: 0 1px 10px rgba(0,0,0,0.07), 
+                0 2px 10px rgba(0,0,0,0.07), 
+                0 3px 10px rgba(0,0,0,0.07);
 }
 
 .navbar-option a {
@@ -143,6 +144,9 @@ h5 {
     height: 100%;
     width: 50%;
     background-image: url("../img/japan-views.jpg");
+    image-rendering: optimizeSpeed;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .about-section {
